Fix bottom gap with css

--- a/src/components/phirepass-terminal/phirepass-terminal.css
+++ b/src/components/phirepass-terminal/phirepass-terminal.css
@@ -4,17 +4,15 @@
     display: block;
     width: 100%;
     height: 100%;
+    min-width: 0;
+    min-height: 0;
+    overflow: hidden;
 }
 
 :host #ccc {
-    width: inherit;
-    height: inherit;
-}
-
-:host #ccc .terminal {
-    height: inherit;
-}
-
-:host #ccc .terminal .xterm-scrollable-element {
-    height: inherit;
+    width: 100%;
+    height: 100%;
+    min-width: 0;
+    min-height: 0;
+    overflow: hidden;
 }
